# mip-cookiecutter

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: ci-cd.yml
{{cookiecutter.repo_name}}/conf/: logging.yml  parameters.yaml
{{cookiecutter.repo_name}}/data/: instance.json
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/data/: models.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/optimization/: constraints.py  engine.py  model_builder.py  parameters.py  solver.py  types.py  variables.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/optimization/base/: constraints.py  variables.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/optimization/constraints/: knapsack_constraints.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/optimization/variables/: assignment_variables.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/utils/: io.py
