[project]
name = "{{cookiecutter.repo_name}}"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.6.0",
    "highspy>=1.11.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "complexipy>=4.0.2",
    "mypy>=1.17.1",
    "{{cookiecutter.package_name}}",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
    "types-pyyaml>=6.0.12.20250822",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D", "C901", "W"]
ignore = ["D100"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-var-parameters = true
ignore-decorators = ["typing.overload"]

[tool.mypy]
check_untyped_defs = true
strict = true

[[tool.mypy.overrides]]
module = "highspy.*"
ignore_missing_imports = true

[tool.uv.sources]
or-project-template = { workspace = true }
